--- a/Mod4_Ex2.html
+++ b/Mod4_Ex2.html
@@ -11,6 +11,11 @@
         <input type="text" name="user" id="user" placeholder="Entre com um usuário">
         <button id="search">Buscar</button>
     </div>
+    <div>
+        <ul id="lista">
+
+        </ul>
+    </div>
     <script src="Mod4_Ex2.js"></script>
 </body>
 </html>
